Delete vehicle documentation
